Bug fix: Is in the collection gets stuck to true.

--- a/src/styles/Image.css
+++ b/src/styles/Image.css
@@ -1,10 +1,11 @@
 .responsive {
-  max-width: 100px;
-  max-height: 200px;
+  /* max-width: 100px; */
+  /* max-height: 200px;
   min-width: 50px;
-  min-height: 100px;
+  min-height: 100px; */
   width: 100%;
-  height: auto;
+  height: 160px;
+  object-fit: cover;
 }
 
 .imageBox {
